--- a/4.html
+++ b/4.html
@@ -7,11 +7,26 @@
 
   <body>
     <h1><a href="index.html">노래 스트리밍 모음집</a></h1>
-
+    <style>
+     a {
+       color:black;
+       text-decoration: none;
+     }
+     .saw{
+       color:gray;
+     }
+     #active{
+       color:red;
+     }
+     h1{
+       font-size:45px;
+       text-align: center;
+     }
+    </style>
 <ol>
-    <li><a href="2.html">카더가든</a></li>
-    <li><a href="3.html">버즈</a></li>
-    <li><a href="4.html">딕펑스</a></li>
+    <li><a href="2.html" class="saw">카더가든</a></li>
+    <li><a href="3.html" class="saw">버즈</a></li>
+    <li><a href="4.html" class="saw" id="active">딕펑스</a></li>
 </ol>
 
 <h2> 딕펑스 노래 제목</h2>
