--- a/index.html
+++ b/index.html
@@ -5,13 +5,31 @@
 <meta charset="utf-8">
 </head>
 
+<style>
+ a {
+   color:black;
+   text-decoration: none;
+ }
+ .saw{
+   color:gray;
+ }
+ .active{
+   color:red;
+ }
+ h1{
+   font-size:45px;
+   text-align: center;
+ }
+</style>
+
+
 <body>
   <h1><a href="index.html">노래 스트리밍 모음집</a></h1>
 
 <ol>
-  <li><a href="2.html">카더가든</a></li>
-  <li><a href="3.html">버즈</a></li>
-  <li><a href="4.html">딕펑스</a></li>
+  <li><a href="2.html" class="saw">카더가든</a></li>
+  <li><a href="3.html" class="saw">버즈</a></li>
+  <li><a href="4.html" class="saw">딕펑스</a></li>
 </ol>
 <h2>소개</h2>
 <p>이 <strong>사이트</strong>는 <u>내가 좋아하는 노래 스트리밍 사이트</u>입니다.</p>
