--- a/2.html
+++ b/2.html
@@ -8,10 +8,23 @@
 <body>
   <h1><a href="index.html">노래 스트리밍 모음집</a></h1>
   <style>
-   a {
-     color:black;
-     text-decoration: none;
-   }
+  a:link{
+    color:black;
+    text-decoration: none;
+  }
+  a:visited{
+    color:black;
+    text-decoration: none;
+  }
+  a:hover{
+    color:gray;
+    text-decoration: none;
+
+  }
+  a:active;{
+    color:red;
+    text-decoration: none;
+  }
    .saw{
      color:gray;
    }
@@ -41,7 +54,7 @@
   한다. 종종 '카 더 가든'과 '메이슨 더 소울'이 다른 가수인 줄
   착각하는 사람들도 있으며, 예명을 바꾼 초창기엔 팬들조차도 예전
   이름이 더 낫다고 말한 경우도 있었다.
-  <a href="https://namu.wiki/w/%EC%B9%B4%EB%8D%94%EA%B0%80%EB%93%A0" target="_blank">출처-나무위키</a>
+  <a href="https://namu.wiki/w/%EC%B9%B4%EB%8D%94%EA%B0%80%EB%93%A0" target="_blank"><span style="color:blue;">출처-나무위키</span></a>
 </p>
 <ul>
 <li><a href="https://www.youtube.com/watch?v=cHkDZ1ekB9U" title="to youtube" target="_blank">나무</a></li>
