--- a/3.html
+++ b/3.html
@@ -8,10 +8,23 @@
 <body>
   <h1><a href="index.html">노래 스트리밍 모음집</a></h1>
   <style>
-   a {
-     color:black;
-     text-decoration: none;
-   }
+  a:link{
+    color:black;
+    text-decoration: none;
+  }
+  a:visited{
+    color:black;
+    text-decoration: none;
+  }
+  a:hover{
+    color:gray;
+    text-decoration: none;
+
+  }
+  a:active;{
+    color:red;
+    text-decoration: none;
+  }
    .saw{
      color:gray;
    }
@@ -46,7 +59,7 @@
 최전성기였던 2005년, 2006년에는 전국 노래방에서 히트곡들이 순위권을
 차지하기도 했었고 현재도 노래방 애창곡 순위에서 중, 상위권에 들어가
 있는 곡이 있다. 2020년대에도 버즈의 히트곡은 전성기만큼은 아니라도
-오랫동안 대중에게 불리고 있다는 것도 특징이다. <a href="https://namu.wiki/w/%EB%B2%84%EC%A6%88(%ED%95%9C%EA%B5%AD%20%EB%B0%B4%EB%93%9C)" target="_blank">출처-나무위키</a>
+오랫동안 대중에게 불리고 있다는 것도 특징이다. <a href="https://namu.wiki/w/%EB%B2%84%EC%A6%88(%ED%95%9C%EA%B5%AD%20%EB%B0%B4%EB%93%9C)" target="_blank"><span style="color:blue;">출처-나무위키</span></a>
 </p>
 <ul>
   <li><a href="https://www.youtube.com/watch?v=AoVt7Qe9t1s" title="to youtube" target="_blank">가시</a></li>
