--- a/4.html
+++ b/4.html
@@ -8,10 +8,23 @@
   <body>
     <h1><a href="index.html">노래 스트리밍 모음집</a></h1>
     <style>
-     a {
-       color:black;
-       text-decoration: none;
-     }
+    a:link{
+      color:black;
+      text-decoration: none;
+    }
+    a:visited{
+      color:black;
+      text-decoration: none;
+    }
+    a:hover{
+      color:gray;
+      text-decoration: none;
+
+    }
+    a:active;{
+      color:red;
+      text-decoration: none;
+    }
      .saw{
        color:gray;
      }
@@ -35,7 +48,7 @@
   <u><strong>딕펑스</strong></u>는 2007년에 결성되어 홍대에서 활동한 인디 록밴드. 멤버 모두
   1987년생에 속한다. 굉장히 특이하게도 키보디스트가 있으면서도
   기타리스트가 없는 밴드다. 슈퍼스타K4 기간 동안 우승후보로
-  주목받았으며 로이킴에게 이어서 준우승을 차지했다. <a href="https://namu.wiki/w/%EB%94%95%ED%8E%91%EC%8A%A4" target="_blank">출처-나무위키</a>
+  주목받았으며 로이킴에게 이어서 준우승을 차지했다. <a href="https://namu.wiki/w/%EB%94%95%ED%8E%91%EC%8A%A4" target="_blank"><span style="color:blue;">출처-나무위키</span></a>
   </p>
 <ul>
   <li><a href="https://www.youtube.com/watch?v=bIWpi5t8EwU" title="to youtube" target="_blank">안녕, 여자친구</a></li>
