--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 </head>
 
 <style>
- a {
-   color:black;
-   text-decoration: none;
- }
+body{
+  margin:0;
+}
  .saw{
    color:gray;
  }
@@ -19,6 +18,31 @@
  h1{
    font-size:45px;
    text-align: center;
+   border-bottom:2px solid gray;
+   margin:0; padding:20px;
+ }
+ a:link{
+   color:black;
+   text-decoration: none;
+ }
+ a:visited{
+   color:black;
+   text-decoration: none;
+ }
+ a:hover{
+   color:gray;
+   text-decoration: none;
+
+ }
+ a:active;{
+   color:red;
+   text-decoration: none;
+ }
+ ol{
+   border-right: 1px solid gray;
+   width:80px;
+   margin:0;
+   padding:20px;
  }
 </style>
 
