--- a/2.html
+++ b/2.html
@@ -25,22 +25,36 @@
     color:red;
     text-decoration: none;
   }
-   .saw{
-     color:gray;
-   }
    #active{
      color:red;
    }
    h1{
      font-size:45px;
      text-align: center;
+     border-bottom: 1px solid gray;
+     margin:0; padding:20px;
+   }
+   #grid ol {
+     border-right: 1px solid gray;
+     margin:0; width:80;
+     padding:20px;
+     padding-left: 47px;
+   }
+   #grid{
+     display:grid;
+     grid-template-columns: 150px 1fr;
+   }
+   #article{
+     padding-left: 24px;
    }
   </style>
+  <div id="grid">
 <ol>
-  <li><a href="2.html" class="saw" id="active">카더가든</a></li>
-  <li><a href="3.html" class="saw">버즈</a></li>
-  <li><a href="4.html" class="saw">딕펑스</a></li>
+  <li><a href="2.html" id="active">카더가든</a></li>
+  <li><a href="3.html">버즈</a></li>
+  <li><a href="4.html">딕펑스</a></li>
 </ol>
+<div id="article">
 <h2>카더가든 노래 제목</h2>
 <img src="카더가든.jpg" width="400">
 <p>
@@ -62,5 +76,7 @@
 <li><a href="https://www.youtube.com/watch?v=MV9kclfajk8home" title="to youtube" target="_blank">home sweet home</a></li>
 <li><a href="https://www.youtube.com/watch?v=w3qQYhQsGtU" title="to youtube" target="_blank">기다린 만큼, 더</a></li>
 </ul>
+</div>
+</div>
 </body>
 </html>
