--- a/index.html
+++ b/index.html
@@ -9,16 +9,10 @@
 body{
   margin:0;
 }
- .saw{
-   color:gray;
- }
- .active{
-   color:red;
- }
  h1{
    font-size:45px;
    text-align: center;
-   border-bottom:2px solid gray;
+   border-bottom:1px solid gray;
    margin:0; padding:20px;
  }
  a:link{
@@ -38,11 +32,21 @@ body{
    color:red;
    text-decoration: none;
  }
- ol{
+ #grid ol{
    border-right: 1px solid gray;
    width:80px;
    margin:0;
    padding:20px;
+ }
+ #grid ol {
+   padding-left: 47px
+ }
+ #grid{
+   display: grid;
+   grid-template-columns: 150px 1fr
+ }
+ #article{
+   padding-left: 24px;
  }
 </style>
 
@@ -50,17 +54,22 @@ body{
 <body>
   <h1><a href="index.html">노래 스트리밍 모음집</a></h1>
 
+<div id="grid">
 <ol>
-  <li><a href="2.html" class="saw">카더가든</a></li>
-  <li><a href="3.html" class="saw">버즈</a></li>
-  <li><a href="4.html" class="saw">딕펑스</a></li>
+  <li><a href="2.html">카더가든</a></li>
+  <li><a href="3.html">버즈</a></li>
+  <li><a href="4.html">딕펑스</a></li>
 </ol>
+<div id="article">
 <h2>소개</h2>
 <p>이 <strong>사이트</strong>는 <u>내가 좋아하는 노래 스트리밍 사이트</u>입니다.</p>
+</div>
+</div>
 </body>
 </html>
-
+<!--
 <p>
+
   <div id="disqus_thread"></div>
 <script>
     /**
@@ -81,3 +90,4 @@ body{
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </p>
+-->
