--- a/index.html
+++ b/index.html
@@ -4,52 +4,7 @@
 <title>노래 스트리밍 모음집</title>
 <meta charset="utf-8">
 </head>
-
-<style>
-body{
-  margin:0;
-}
- h1{
-   font-size:45px;
-   text-align: center;
-   border-bottom:1px solid gray;
-   margin:0; padding:20px;
- }
- a:link{
-   color:black;
-   text-decoration: none;
- }
- a:visited{
-   color:black;
-   text-decoration: none;
- }
- a:hover{
-   color:gray;
-   text-decoration: none;
-
- }
- a:active;{
-   color:red;
-   text-decoration: none;
- }
- #grid ol{
-   border-right: 1px solid gray;
-   width:80px;
-   margin:0;
-   padding:20px;
- }
- #grid ol {
-   padding-left: 47px
- }
- #grid{
-   display: grid;
-   grid-template-columns: 150px 1fr
- }
- #article{
-   padding-left: 24px;
- }
-</style>
-
+<link rel="stylesheet" href="style.css">
 
 <body>
   <h1><a href="index.html">노래 스트리밍 모음집</a></h1>
