--- a/2.html
+++ b/2.html
@@ -3,51 +3,12 @@
 <head>
 <title>카더가든</title>
 <meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
   <h1><a href="index.html">노래 스트리밍 모음집</a></h1>
-  <style>
-  a:link{
-    color:black;
-    text-decoration: none;
-  }
-  a:visited{
-    color:black;
-    text-decoration: none;
-  }
-  a:hover{
-    color:gray;
-    text-decoration: none;
-
-  }
-  a:active;{
-    color:red;
-    text-decoration: none;
-  }
-   #active{
-     color:red;
-   }
-   h1{
-     font-size:45px;
-     text-align: center;
-     border-bottom: 1px solid gray;
-     margin:0; padding:20px;
-   }
-   #grid ol {
-     border-right: 1px solid gray;
-     margin:0; width:80;
-     padding:20px;
-     padding-left: 47px;
-   }
-   #grid{
-     display:grid;
-     grid-template-columns: 150px 1fr;
-   }
-   #article{
-     padding-left: 24px;
-   }
-  </style>
   <div id="grid">
 <ol>
   <li><a href="2.html" id="active">카더가든</a></li>
