--- a/3.html
+++ b/3.html
@@ -3,45 +3,20 @@
 <head>
 <title>버즈</title>
 <meta charset="utf-8">
+<link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
   <h1><a href="index.html">노래 스트리밍 모음집</a></h1>
-  <style>
-  a:link{
-    color:black;
-    text-decoration: none;
-  }
-  a:visited{
-    color:black;
-    text-decoration: none;
-  }
-  a:hover{
-    color:gray;
-    text-decoration: none;
 
-  }
-  a:active;{
-    color:red;
-    text-decoration: none;
-  }
-   .saw{
-     color:gray;
-   }
-   #active{
-     color:red;
-   }
-   h1{
-     font-size:45px;
-     text-align: center;
-   }
-  </style>
-
+<div id="grid">
 <ol>
-  <li><a href="2.html" class="saw">카더가든</a></li>
-  <li><a href="3.html" class="saw" id="active">버즈</a></li>
-  <li><a href="4.html" class="saw">딕펑스</a></li>
+  <li><a href="2.html">카더가든</a></li>
+  <li><a href="3.html" id="active">버즈</a></li>
+  <li><a href="4.html">딕펑스</a></li>
 </ol>
+<div id="article">
 <h2>버즈 노래 제목 </h2>
 <img src="버즈.jpg" width="400">
 <p>
@@ -66,5 +41,7 @@
   <li><a href="https://www.youtube.com/watch?v=bIWpi5t8EwU" title="to youtube" target="_blank">너는 나의 꽃이다</a></li>
   <li><a href="https://www.youtube.com/watch?v=bIWpi5t8EwU" title="to youtube" target="_blank">일기</a></li>
   <li><a href="https://www.youtube.com/watch?v=bIWpi5t8EwU" title="to youtube" target="_blank">사랑은 가슴이 시킨다</a></li>
+</div>
+</div>
 </body>
 </html>
