--- a/4.html
+++ b/4.html
@@ -3,45 +3,19 @@
 <head>
   <title>딕펑스</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+
   </head>
 
   <body>
     <h1><a href="index.html">노래 스트리밍 모음집</a></h1>
-    <style>
-    a:link{
-      color:black;
-      text-decoration: none;
-    }
-    a:visited{
-      color:black;
-      text-decoration: none;
-    }
-    a:hover{
-      color:gray;
-      text-decoration: none;
-
-    }
-    a:active;{
-      color:red;
-      text-decoration: none;
-    }
-     .saw{
-       color:gray;
-     }
-     #active{
-       color:red;
-     }
-     h1{
-       font-size:45px;
-       text-align: center;
-     }
-    </style>
-<ol>
-    <li><a href="2.html" class="saw">카더가든</a></li>
-    <li><a href="3.html" class="saw">버즈</a></li>
-    <li><a href="4.html" class="saw" id="active">딕펑스</a></li>
-</ol>
-
+    <div id="grid">
+ <ol>
+    <li><a href="2.html">카더가든</a></li>
+    <li><a href="3.html">버즈</a></li>
+    <li><a href="4.html" id="active">딕펑스</a></li>
+ </ol>
+<div id="article">
 <h2> 딕펑스 노래 제목</h2>
 <img src="딕펑스.jpg" width="400">
 <p>
@@ -56,5 +30,7 @@
   <li><a href="https://www.youtube.com/watch?v=bIWpi5t8EwU" title="to youtube" target="_blank">viva 청춘</a></li>
   <li><a href="https://www.youtube.com/watch?v=bIWpi5t8EwU" title="to youtube" target="_blank">평행선</a></li>
   </ul>
+</div>
+</div>
     </body>
   </html>
