--- a/2.html
+++ b/2.html
@@ -14,7 +14,7 @@
   <li><a href="4.html">딕펑스</a></li>
 </ol>
 <div id="article">
-<h2>카더가든 노래 제목</h2>
+<h2>카더가든</h2>
 <img src="카더가든.jpg" width="400">
 <p>
   대한민국의 가수로 본명은 차정원이다. 본명을 그대로 영어로
