--- a/4.html
+++ b/4.html
@@ -16,7 +16,7 @@
     <li><a href="4.html" id="active">딕펑스</a></li>
  </ol>
 <div id="article">
-<h2> 딕펑스 노래 제목</h2>
+<h2> 딕펑스</h2>
 <img src="딕펑스.jpg" width="400">
 <p>
   <u><strong>딕펑스</strong></u>는 2007년에 결성되어 홍대에서 활동한 인디 록밴드. 멤버 모두
