--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
 <body style="background-color:beige;color:black;">
   <h1><a href="index.html">노래 스트리밍 모음집</a></h1>
 <div id="position">
-  <input type="button" value="night"
-  onclick="document.querySelector('body').style.backgroundColor='DarkSlateGray';
-  document.querySelector('body').style.color='white';">
-  <input type="button" value="day"
-  onclick="document.querySelector('body').style.backgroundColor='beige';
-  document.querySelector('body').style.color='black';">
+  <input id="night_day" type="button" value="night" onclick="
+       var target = document.querySelector('body')
+       if (this.value==='night'){
+       target.style.backgroundColor='DarkSlateGray';
+       target.style.color='white';
+       this.value='day';
+     } else {
+       target.style.backgroundColor='beige';
+       target.style.color='black';
+       this.value='night';
+     }
+       ">
+
 </div>
 
 <div id="grid">
