--- a/javascript.html
+++ b/javascript.html
@@ -5,33 +5,19 @@
     <title></title>
   </head>
   <body>
-    <h1>Conditional statements</h1>
-    <h2>Program</h2>
+    <h1>Loop & Array</h1>
     <script>
-    document.write("1<br>");
-    document.write("2<br>");
-    document.write("3<br>");
-    document.write("4<br>");
+      var coworkers = ['egoing', 'leezche', 'duru', 'taeho'];
     </script>
-    <h2>IF-true</h2>
-    <script>
-    document.write("1<br>");
-    if(true){
-    document.write("2<br>");
-  } else{
-    document.write("3<br>");
-  }
-    document.write("4<br>");
-    </script>
-<h2>IF-false</h2>
-    <script>
-    document.write("1<br>");
-    if(false){
-    document.write("2<br>");
-  } else{
-    document.write("3<br>");
-  }
-    document.write("4<br>");
-    </script>
+    <h2>Co workers</h2>
+    <ul>
+<script>
+var i = 0;
+while(i<coworkers.length){
+  document.write('<li>'+coworkers[i]+'</li>')
+  i = i+1;
+}
+</script>
+ </ul>
   </body>
 </html>
