--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body style="background-color:beige;color:black;">
   <h1><a href="index.html">노래 스트리밍 모음집</a></h1>
 <div id="position">
-  <input id="night_day" type="button" value="night" onclick="
+  <input type="button" value="night" onclick="
 nightDayHandler(this)
        ">
 </div>
