--- a/index.html
+++ b/index.html
@@ -3,6 +3,38 @@
 <head>
 <title>노래 스트리밍 모음집</title>
 <meta charset="utf-8">
+</head>
+<link rel="stylesheet" href="style.css">
+
+<body style="background-color:beige;color:black;">
+  <div class="content">
+    <div class="img">
+
+    <div class="content">
+    <h1><a href="index.html">노래 스트리밍 모음집</a></h1>
+  </div>
+  <div class="img-cover"></div>
+  <div id="position">
+    <input type="button" value="night" onclick="
+  nightDayHandler(this)
+         ">
+  </div>
+
+</div>
+
+  </div>
+
+<div id="grid">
+<ol>
+  <li><a href="2.html">카더가든</a></li>
+  <li><a href="3.html">버즈</a></li>
+  <li><a href="4.html">딕펑스</a></li>
+</ol>
+<div id="article">
+<h2>소개</h2>
+<p>이 <strong>사이트</strong>는 <u>내가 좋아하는 노래 스트리밍 사이트</u>입니다.</p>
+</div>
+</div>
 <script>
   function LinksSetColor(color){
     var a = document.querySelectorAll('a');
@@ -23,7 +55,7 @@
       BodySetColor('white')
       self.value='day';
 
-      LinksSetColor('powderblue');
+      LinksSetColor('gold');
 
     } else {
       target.style.backgroundColor='beige';
@@ -34,28 +66,7 @@
     }
   }
   </script>
-</head>
-<link rel="stylesheet" href="style.css">
 
-<body style="background-color:beige;color:black;">
-  <h1><a href="index.html">노래 스트리밍 모음집</a></h1>
-<div id="position">
-  <input type="button" value="night" onclick="
-nightDayHandler(this)
-       ">
-</div>
-
-<div id="grid">
-<ol>
-  <li><a href="2.html">카더가든</a></li>
-  <li><a href="3.html">버즈</a></li>
-  <li><a href="4.html">딕펑스</a></li>
-</ol>
-<div id="article">
-<h2>소개</h2>
-<p>이 <strong>사이트</strong>는 <u>내가 좋아하는 노래 스트리밍 사이트</u>입니다.</p>
-</div>
-</div>
 </body>
 </html>
   <input id="night_day" type="button" value="night" onclick="
